test/tests/diagnostics/ast_syntax_02f/jastadd.err.expected
Error at tests/diagnostics/ast_syntax_02f/Test.ast:1:1: unexpected token "[":
[A] : B;
^
